--- a/GYAK/1_lesson_practice_empty.ipynb
+++ b/GYAK/1_lesson_practice_empty.ipynb
@@ -14,10 +14,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def contains_odd(input_list):\n",
+    "    c = False\n",
+    "    for i in input_list:\n",
+    "        if (i % 2 != 0):\n",
+    "            c = True\n",
+    "    return c\n",
+    "\n",
+    "contains_odd([2,4,6,8])"
+   ]
   },
   {
    "cell_type": "code",
@@ -98,8 +118,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
