--- a/GYAK/1_lesson_practice_empty.ipynb
+++ b/GYAK/1_lesson_practice_empty.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,10 +55,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, False, True, False, True, True]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_odd(input_list):\n",
+    "    output_list = []\n",
+    "    for i in input_list:\n",
+    "        if (i % 2 == 0):\n",
+    "            output_list.append(False)\n",
+    "        else:\n",
+    "            output_list.append(True)\n",
+    "    return output_list\n",
+    "\n",
+    "is_odd([1,2,3,4,5,123])\n",
+    "#is_odd([1,3,5,123])"
+   ]
   },
   {
    "cell_type": "code",
