--- a/GYAK/1_lesson_practice_empty.ipynb
+++ b/GYAK/1_lesson_practice_empty.ipynb
@@ -99,10 +99,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 7, 9]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def element_wise_sum(input_list_1, input_list_2):\n",
+    "    output_list = []\n",
+    "    for i in range(0, len(input_list_1)):\n",
+    "        output_list.append(input_list_1[i] + input_list_2[i])\n",
+    "    return output_list\n",
+    "\n",
+    "element_wise_sum([1,2,3], [4,5,6])   "
+   ]
   },
   {
    "cell_type": "code",
@@ -119,10 +138,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 1), ('b', 2), ('c', 3)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def dict_to_list(input_dict):\n",
+    "    output_list = []\n",
+    "    for i in input_dict:\n",
+    "        output_list.append((i, input_dict[i]))\n",
+    "    return output_list\n",
+    "\n",
+    "dict_to_list({\"a\":1,\"b\":2,\"c\":3})\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -150,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
