--- a/HAZI/1_homework_empty.ipynb
+++ b/HAZI/1_homework_empty.ipynb
@@ -81,17 +81,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def unique(input_list):\n",
-    "    c = False\n",
-    "    if (input_list.contains(\"?\")):\n",
-    "        c = True\n",
-    "    return c\n",
+    "    flag = False\n",
+    "    for i in input_list:\n",
+    "        if (input_list.count(i) == 1):\n",
+    "            flag = True\n",
+    "            break\n",
     "\n",
-    "#TODO"
+    "    return flag\n",
+    "\n",
+    "#unique([1,1,2,3,4,5])\n",
+    "unique([1,1,1,1,1])"
    ]
   },
   {
@@ -108,10 +123,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def flatten(input_list):\n",
+    "    output_list = []\n",
+    "    for i in input_list:\n",
+    "        if  type(i) == list:\n",
+    "            output_list = output_list + flatten(i)\n",
+    "        else:\n",
+    "            output_list.append(i)\n",
+    "    \n",
+    "    return output_list\n",
+    "\n",
+    "#flatten([1, [2, [3, 4], 5], 6, [7, 8, 9]])\n",
+    "#flatten([1, [2, 3, 4, 5], 6, [7, 8, 9]])\n",
+    "#flatten([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+   ]
   },
   {
    "cell_type": "code",
@@ -296,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
