--- a/HAZI/1_homework_empty.ipynb
+++ b/HAZI/1_homework_empty.ipynb
@@ -167,10 +167,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def merge_lists(*args):\n",
+    "    output_list = []\n",
+    "    for i in args:\n",
+    "        output_list += i\n",
+    "    \n",
+    "    return output_list\n",
+    "\n",
+    "merge_lists([1,2], [3,4], [5,6])"
+   ]
   },
   {
    "cell_type": "code",
@@ -187,10 +207,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 1), (4, 3), (6, 5)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse_tuples(input_list):\n",
+    "    output_list = []\n",
+    "    for i in input_list:\n",
+    "        output_list.append((i[1], i[0]))\n",
+    "    \n",
+    "    return output_list\n",
+    "\n",
+    "#reverse_tuples([(1,2), (3,4), (5,6)])\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -206,10 +246,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 2, 3, 4, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def remove_tuplicates(input_list):\n",
+    "    output_list = []\n",
+    "\n",
+    "    for i in input_list:\n",
+    "        if i not in output_list:\n",
+    "            output_list.append(i)\n",
+    "\n",
+    "    return output_list\n",
+    "\n",
+    "remove_tuplicates([11,11,2,3,4,5,6,6,7,7,8])"
+   ]
   },
   {
    "cell_type": "code",
@@ -225,10 +287,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 4, 7, 10], [2, 5, 8, 11], [3, 6, 9, 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def transpose(input_list):\n",
+    "    output_list = []\n",
+    "    #elobb az oszlopokin iteralunk, belso cilkus a sor\n",
+    "    for i in range(len(input_list[0])):\n",
+    "        temp_list = []\n",
+    "        for j in range(len(input_list)):\n",
+    "            temp_list.append(input_list[j][i])\n",
+    "        output_list.append(temp_list)\n",
+    "    \n",
+    "    return output_list\n",
+    "\n",
+    "print(transpose([[1,2,3], [4,5,6], [7,8,9], [10,11,12]]), sep=\"\\n\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -245,10 +329,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 1], [1, 1, 1]]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"def split_into_chunks(input_list : list, chunk_size):\n",
+    "    output_list = []\n",
+    "    chunk_counter = 0\n",
+    "    temp_list = []\n",
+    "\n",
+    "    for i in range(len(input_list)):\n",
+    "        j = 0\n",
+    "        while j < len(input_list[i]):\n",
+    "            if len(temp_list) < chunk_size:\n",
+    "                temp_list.append(input_list[i][j])\n",
+    "            j += 1\n",
+    "        output_list.append(temp_list)\n",
+    "\n",
+    "\n",
+    "    return output_list\n",
+    "\n",
+    "split_into_chunks([[1,1],[1,2,2,2,3,3,3,4,4,4,5,5,5]], 3)\"\"\"\n",
+    "\n",
+    "#TODO\n",
+    "            "
+   ]
   },
   {
    "cell_type": "code",
@@ -284,10 +400,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'odd',\n",
+       " 3: 'odd',\n",
+       " 4: 'even',\n",
+       " 5: 'odd',\n",
+       " 6: 'even',\n",
+       " 7: 'odd',\n",
+       " 8: 'even',\n",
+       " 9: 'odd'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def by_parity(input_list):\n",
+    "    output_dict = {}\n",
+    "    for i in input_list:\n",
+    "        if i % 2 == 0:\n",
+    "            output_dict[i] = \"even\"\n",
+    "        elif i % 2 == 1:\n",
+    "            output_dict[i] = \"odd\"\n",
+    "\n",
+    "    return output_dict\n",
+    "\n",
+    "#by_parity([1,1,3,4,5,6,7,8,9])"
+   ]
   },
   {
    "cell_type": "code",
