--- a/HAZI/1_homework_empty.ipynb
+++ b/HAZI/1_homework_empty.ipynb
@@ -15,18 +15,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def subset(input_list, start_index, end_index):\n",
     "    temp_list = []\n",
     "    for i in range(start_index, end_index):\n",
     "        temp_list.append(input_list[i])\n",
-    "    return temp_list\n",
+    "    return temp_list     #input_list[start_index:end_index] \n",
     "\n",
     "\n",
-    "#subset([1,2,3,4,5,6,7], 2, 5)"
+    "subset([1,2,3,4,5,6,7], 2, 5)"
    ]
   },
   {
@@ -81,22 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def unique(input_list):\n",
+    "def unique(input_list) -> bool:\n",
     "    flag = False\n",
     "    for i in input_list:\n",
     "        if (input_list.count(i) == 1):\n",
@@ -105,8 +116,8 @@
     "\n",
     "    return flag\n",
     "\n",
-    "#unique([1,1,2,3,4,5])\n",
-    "unique([1,1,1,1,1])"
+    "unique([1,1,2,3,4,5])\n",
+    "#unique([1,1,1,1,1])"
    ]
   },
   {
@@ -329,22 +340,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1, 1, 1], [1, 1, 1]]"
+       "[[1, 1, 1], [2, 2, 2], [3, 3, 3], [4, 4, 4], [5, 5, 5], [6, 6, 6], [7, 7]]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"def split_into_chunks(input_list : list, chunk_size):\n",
+    "'''def split_into_chunks(input_list : list, chunk_size):\n",
     "    output_list = []\n",
     "    chunk_counter = 0\n",
     "    temp_list = []\n",
@@ -360,8 +371,23 @@
     "\n",
     "    return output_list\n",
     "\n",
-    "split_into_chunks([[1,1],[1,2,2,2,3,3,3,4,4,4,5,5,5]], 3)\"\"\"\n",
+    "split_into_chunks([[1,1],[1,2,2,2,3,3,3,4,4,4,5,5,5]], 3)'''\n",
     "\n",
+    "\n",
+    "def split_into_chunks(input_list : list, chunk_size):\n",
+    "    output_list = []\n",
+    "    flat_list = sum(input_list, [])\n",
+    "\n",
+    "    for i in range(0, len(flat_list), chunk_size):\n",
+    "        temp_list = [x for x in flat_list[i:i+chunk_size]]\n",
+    "        output_list.append(temp_list)\n",
+    "\n",
+    "    return output_list\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "split_into_chunks([[1,1],[1,2,2,2,3,3,3,4,4,4,5,5,5,6], [6,6,7,7]], 3)\n",
     "#TODO\n",
     "            "
    ]
@@ -380,10 +406,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'a', 2: 'b', 3: 'c', 4: 'd', 5: 'e'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def merge_dicts(*input_dict : dict):\n",
+    "    output_dict = {}\n",
+    "    for i in input_dict:\n",
+    "        output_dict.update(i)\n",
+    "    \n",
+    "    return output_dict\n",
+    "\n",
+    "merge_dicts({1:\"a\"}, {2:\"b\"}, {3:\"c\"}, {4:\"d\", 5:\"e\"})"
+   ]
   },
   {
    "cell_type": "code",
@@ -400,23 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: 'odd',\n",
-       " 3: 'odd',\n",
-       " 4: 'even',\n",
-       " 5: 'odd',\n",
-       " 6: 'even',\n",
-       " 7: 'odd',\n",
-       " 8: 'even',\n",
-       " 9: 'odd'}"
+       "{'even': [4, 6, 8], 'odd': [1, 1, 3, 5, 7, 9]}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,15 +463,18 @@
    "source": [
     "def by_parity(input_list):\n",
     "    output_dict = {}\n",
+    "    even = []\n",
+    "    odd = []\n",
     "    for i in input_list:\n",
     "        if i % 2 == 0:\n",
-    "            output_dict[i] = \"even\"\n",
+    "            even.append(i)\n",
     "        elif i % 2 == 1:\n",
-    "            output_dict[i] = \"odd\"\n",
-    "\n",
+    "            odd.append(i)\n",
+    "    output_dict[\"even\"] = even\n",
+    "    output_dict[\"odd\"] = odd\n",
     "    return output_dict\n",
     "\n",
-    "#by_parity([1,1,3,4,5,6,7,8,9])"
+    "by_parity([1,1,3,4,5,6,7,8,9])"
    ]
   },
   {
@@ -451,10 +493,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 2.0, 'b': 5.0, 'c': 8.0}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mean_key_value(input_dict : dict):\n",
+    "    output_dict = {}\n",
+    "    for key, value in input_dict.items():\n",
+    "        output_dict[key] = sum(value) / len(value)\n",
+    "\n",
+    "    return output_dict\n",
+    "\n",
+    "mean_key_value({\"a\":[1,2,3], \"b\":[4,5,6], \"c\":[7,8,9]})"
+   ]
   },
   {
    "cell_type": "code",
