--- a/HAZI/HAZI01/1_homework_empty.ipynb
+++ b/HAZI/HAZI01/1_homework_empty.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that returns with a subsest of a list.\n",
+    "# (1.) 0 Create a function that returns with a subsest of a list.\n",
     "#The subset's starting and ending indexes should be set as input parameters (the list aswell).\n",
     "#return type: list\n",
     "#function name must be: subset\n",
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 4, 5]"
+       "[3, 4, 5, 6]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,9 +32,10 @@
    "source": [
     "def subset(input_list, start_index, end_index):\n",
     "    temp_list = []\n",
-    "    for i in range(start_index, end_index):\n",
+    "    for i in range(start_index, end_index + 1):\n",
     "        temp_list.append(input_list[i])\n",
-    "    return temp_list     #input_list[start_index:end_index] \n",
+    "    return temp_list     \n",
+    "    #input_list[start_index:end_index] \n",
     "\n",
     "\n",
     "subset([1,2,3,4,5,6,7], 2, 5)"
@@ -46,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that returns every nth element of a list.\n",
+    "# (2.) 1 Create a function that returns every nth element of a list.\n",
     "#return type: list\n",
     "#function name must be: every_nth\n",
     "#input parameters: input_list,step_size"
@@ -84,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that can decide whether a list contains unique values or not\n",
+    "# (3.) 0 Create a function that can decide whether a list contains unique values or not\n",
     "#return type: bool\n",
     "#function name must be: unique\n",
     "#input parameters: input_list"
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +102,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,12 +112,12 @@
     "    flag = False\n",
     "    for i in input_list:\n",
     "        if (input_list.count(i) == 1):\n",
-    "            flag = True\n",
-    "            break\n",
+    "            return True #flag = True\n",
+    "            #break\n",
     "\n",
-    "    return flag\n",
+    "    return False #flag\n",
     "\n",
-    "unique([1,1,2,3,4,5])\n",
+    "unique([1,1,2,3,3,4,5,4,5])\n",
     "#unique([1,1,1,1,1])"
    ]
   },
@@ -126,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that can flatten a nested list ([[..],[..],..])\n",
+    "# (4.) 1 Create a function that can flatten a nested list ([[..],[..],..])\n",
     "#return type: list\n",
     "#fucntion name must be: flatten\n",
     "#input parameters: input_list"
@@ -170,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that concatenates n lists\n",
+    "# (5.) 1 Create a function that concatenates n lists\n",
     "#return type: list\n",
     "#function name must be: merge_lists\n",
     "#input parameters: *args\n"
@@ -209,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that can reverse a list of tuples\n",
+    "# (6.)  1 Create a function that can reverse a list of tuples\n",
     "#example [(1,2),...] => [(2,1),...]\n",
     "#return type: list\n",
     "#fucntion name must be: reverse_tuples\n",
@@ -249,15 +250,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that removes duplicates from a list\n",
+    "# (7.) E Create a function that removes duplicates from a list\n",
     "#return type: list\n",
-    "#fucntion name must be: remove_tuplicates\n",
+    "#fucntion name must be: remove_duplicates\n",
     "#input parameters: input_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -266,13 +267,13 @@
        "[11, 2, 3, 4, 5, 6, 7, 8]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def remove_tuplicates(input_list):\n",
+    "def remove_duplicates(input_list):\n",
     "    output_list = []\n",
     "\n",
     "    for i in input_list:\n",
@@ -281,7 +282,7 @@
     "\n",
     "    return output_list\n",
     "\n",
-    "remove_tuplicates([11,11,2,3,4,5,6,6,7,7,8])"
+    "remove_duplicates([11,11,2,2,2,2,3,4,5,6,6,7,7,8])"
    ]
   },
   {
@@ -290,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that transposes a nested list (matrix)\n",
+    "# (8.) 1 Create a function that transposes a nested list (matrix)\n",
     "#return type: list\n",
     "#function name must be: transpose\n",
     "#input parameters: input_list"
@@ -331,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that can split a nested list into chunks\n",
+    "# (9.) E Create a function that can split a nested list into chunks\n",
     "#chunk size is given by parameter\n",
     "#return type: list\n",
     "#function name must be: split_into_chunks\n",
@@ -340,55 +341,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1, 1, 1], [2, 2, 2], [3, 3, 3], [4, 4, 4], [5, 5, 5], [6, 6, 6], [7, 7]]"
+       "[[1, 1, 1, 2, 2, 2, 3, 3, 3, 4, 4, 4, 5, 5, 5, 6, 6, 6, 7, 7]]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''def split_into_chunks(input_list : list, chunk_size):\n",
-    "    output_list = []\n",
-    "    chunk_counter = 0\n",
-    "    temp_list = []\n",
-    "\n",
-    "    for i in range(len(input_list)):\n",
-    "        j = 0\n",
-    "        while j < len(input_list[i]):\n",
-    "            if len(temp_list) < chunk_size:\n",
-    "                temp_list.append(input_list[i][j])\n",
-    "            j += 1\n",
-    "        output_list.append(temp_list)\n",
-    "\n",
-    "\n",
-    "    return output_list\n",
-    "\n",
-    "split_into_chunks([[1,1],[1,2,2,2,3,3,3,4,4,4,5,5,5]], 3)'''\n",
-    "\n",
-    "\n",
     "def split_into_chunks(input_list : list, chunk_size):\n",
     "    output_list = []\n",
-    "    flat_list = sum(input_list, [])\n",
     "\n",
-    "    for i in range(0, len(flat_list), chunk_size):\n",
-    "        temp_list = [x for x in flat_list[i:i+chunk_size]]\n",
+    "    for i in range(0, len(input_list), chunk_size):\n",
+    "        temp_list = [x for x in input_list[i:i+chunk_size]]\n",
     "        output_list.append(temp_list)\n",
     "\n",
     "    return output_list\n",
+    "\n",
+    "\n",
     "    \n",
+    "#split_into_chunks([[1,1],[1,2,2,2,3,3,3,4,4,4,5,5,5,6], [6,6,7,7]], 3)\n",
+    "split_into_chunks([1,1,1,2,2,2,3,3,3,4,4,4,5,5,5,6,6,6,7,7], 56)\n",
     "\n",
-    "\n",
-    "\n",
-    "split_into_chunks([[1,1],[1,2,2,2,3,3,3,4,4,4,5,5,5,6], [6,6,7,7]], 3)\n",
-    "#TODO\n",
     "            "
    ]
   },
@@ -398,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that can merge n dictionaries\n",
+    "# (10.) 1 Create a function that can merge n dictionaries\n",
     "#return type: dictionary\n",
     "#function name must be: merge_dicts\n",
     "#input parameters: *dict"
@@ -437,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that receives a list of integers and sort them by parity\n",
+    "# (11.) 1 Create a function that receives a list of integers and sort them by parity\n",
     "#and returns with a dictionary like this: {\"even\":[...],\"odd\":[...]}\n",
     "#return type: dict\n",
     "#function name must be: by_parity\n",
@@ -483,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a function that receives a dictionary like this: {\"some_key\":[1,2,3,4],\"another_key\":[1,2,3,4],....}\n",
+    "# (12.) 1 Create a function that receives a dictionary like this: {\"some_key\":[1,2,3,4],\"another_key\":[1,2,3,4],....}\n",
     "#and return a dictionary like this : {\"some_key\":mean_of_values,\"another_key\":mean_of_values,....}\n",
     "#in short calculates the mean of the values key wise\n",
     "#return type: dict\n",
