unique func fixed

--- a/HAZI/HAZI01/1_homework_empty.ipynb
+++ b/HAZI/HAZI01/1_homework_empty.ipynb
@@ -93,31 +93,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def unique(input_list) -> bool:\n",
+    "'''def unique(input_list) -> bool:\n",
     "    flag = False\n",
     "    for i in input_list:\n",
     "        if (input_list.count(i) == 1):\n",
     "            return True #flag = True\n",
     "            #break\n",
     "\n",
-    "    return False #flag\n",
+    "    return False #flag'''\n",
     "\n",
-    "unique([1,1,2,3,3,4,5,4,5])\n",
+    "def unique(input_list:list) -> bool:\n",
+    "    temp_list = sum(input_list)\n",
+    "    i = 0\n",
+    "    while i < len(input_list) and input_list.count(input_list[i]) == 1:\n",
+    "        i += 1\n",
+    "    \n",
+    "\n",
+    "    return len(input_list) == i\n",
+    "\n",
+    "\n",
+    "unique([1,2,3,4,5])\n",
+    "unique([1,2,3,4,5,5])\n",
     "#unique([1,1,1,1,1])"
    ]
   },
