--- a/GYAK/GYAK02/GYAK02.ipynb
+++ b/GYAK/GYAK02/GYAK02.ipynb
@@ -256,11 +256,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def "
+    "def flatten(arr : np.array) -> np.array:\n",
+    "    return arr.flatten()\n",
+    "\n",
+    "flatten(np.array([[1,2], [3,4]]))"
    ]
   }
  ],
