First 8 functions created

--- a/GYAK/GYAK02/GYAK02.ipynb
+++ b/GYAK/GYAK02/GYAK02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Készíts egy függvényt ami transzponálja a paraméterül kapott mártix-ot:\n",
+    "#TODO Készíts egy függvényt ami transzponálja a paraméterül kapott mártix-ot:\n",
     "# Be: [[1, 2], [3, 4]]\n",
     "# Ki: [[1, 3], [2, 4]]\n",
     "# do_transpose()"
@@ -111,17 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 3],\n",
-       "       [2, 4]])"
+       "array([[1, 4, 7],\n",
+       "       [2, 5, 8],\n",
+       "       [3, 6, 9]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +131,7 @@
     "def do_transpose(arr : np.array) -> np.array:\n",
     "    return np.transpose(arr)\n",
     "\n",
-    "#do_transpose(np.array([[1, 2], [3, 4]]))"
+    "do_transpose(np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]]))"
    ]
   },
   {
@@ -139,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Készíts egy olyan függvényt ami az array-ben lévő értékeket N tizenedjegyik kerekíti, ha nincs megadva ez a paraméter, akkor legyen az alapértelmezett a kettő \n",
+    "#TODO Készíts egy olyan függvényt ami az array-ben lévő értékeket N tizenedjegyik kerekíti, ha nincs megadva ez a paraméter, akkor legyen az alapértelmezett a kettő \n",
     "# Be: [0.1223, 0.1675], 2\n",
     "# Ki: [0.12, 0.17]\n",
     "# round_array()"
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
        "array([0.12, 0.17])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +166,7 @@
     "def round_array(arr : np.array, n) -> np.array:\n",
     "    return np.around(arr, decimals=n)\n",
     "\n",
-    "#round_array([0.1223, 0.1675], 2)"
+    "round_array([0.1223, 0.1675], 2)"
    ]
   },
   {
