--- a/HAZI/HAZI02/HAZI02.ipynb
+++ b/HAZI/HAZI02/HAZI02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,103 +25,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 1],\n",
+       "       [4, 3],\n",
+       "       [6, 5]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Írj egy olyan fügvényt, ami megfordítja egy 2d array oszlopait. Bemenetként egy array-t vár.\n",
+    "#(1) Írj egy olyan fügvényt, ami megfordítja egy 2d array oszlopait. Bemenetként egy array-t vár.\n",
     "# Be: [[1,2],[3,4]]\n",
     "# Ki: [[2,1],[4,3]]\n",
-    "# column_swap()"
+    "# column_swap()\n",
+    "\n",
+    "def column_swap(arr : np.array) -> np.array:\n",
+    "    arr[:, [0,1]] = arr[:, [1, 0]]\n",
+    "    return arr\n",
+    "\n",
+    "#column_swap(np.array([[1,2],[3,4]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Készíts egy olyan függvényt ami összehasonlít két array-t és adjon vissza egy array-ben, hogy hol egyenlőek \n",
+    "#(2) Készíts egy olyan függvényt ami összehasonlít két array-t és adjon vissza egy array-ben, hogy hol egyenlőek \n",
     "# Pl Be: [7,8,9], [9,8,7] \n",
     "# Ki: [1]\n",
     "# compare_two_array()\n",
-    "# egyenlő elemszámúakra kell csak hogy működjön"
+    "# egyenlő elemszámúakra kell csak hogy működjön\n",
+    "\n",
+    "def compare_two_array(arr1 : np.array, arr2 : np.array) -> np.array:\n",
+    "    return np.where(arr1[:] == arr2[:])[0]\n",
+    "\n",
+    "''' array([1, 3], dtype=int64)'''\n",
+    "#compare_two_array(np.array([7,8,9, 10]), np.array([9,8,7, 10]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Készíts egy olyan függvényt, ami vissza adja string-ként a megadott array dimenzióit:\n",
+    "#(3) Készíts egy olyan függvényt, ami vissza adja string-ként a megadott array dimenzióit:\n",
     "# Be: [[1,2,3], [4,5,6]]\n",
     "# Ki: \"sor: 2, oszlop: 3, melyseg: 1\"\n",
     "# get_array_shape()\n",
-    "# 3D-vel még műküdnie kell!, "
+    "# 3D-vel még műküdnie kell!, \n",
+    "\n",
+    "def get_array_shape(arr : np.array)->np.array:\n",
+    "    if len(np.shape(arr)) == 3:\n",
+    "        return f\"sor: {np.shape(arr)[0]}, oszlop: {np.shape(arr)[1]}, melyseg: {np.shape(arr)[2]}\"\n",
+    "    else:\n",
+    "        return f\"sor: {np.shape(arr)[0]}, oszlop: {np.shape(arr)[1]}, melyseg: 1\"\n",
+    "\n",
+    "#get_array_shape(np.array([[[1,2,3], [4,5,6]], [[1,2,3], [4,5,6]], [[1,2,3], [4,5,6]]]))\n",
+    "#get_array_shape(np.array([[1,2,3], [4,5,6]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {
+    "tags": [
+     "important"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Készíts egy olyan függvényt, aminek segítségével elő tudod állítani egy neurális hálózat tanításához szükséges pred-et egy numpy array-ből. \n",
+    "#(4) Készíts egy olyan függvényt, aminek segítségével elő tudod állítani egy neurális hálózat tanításához szükséges pred-et egy numpy array-ből. \n",
     "# Bementként add meg az array-t, illetve hogy mennyi class-od van. Kimenetként pedig adjon vissza egy 2d array-t, ahol a sorok az egyes elemek. Minden nullákkal teli legyen és csak ott álljon egyes, ahol a bementi tömb megjelöli. \n",
     "# Pl. ha 1 van a bemeneten és 4 classod van, akkor az adott sorban az array-ban a [1] helyen álljon egy 1-es, a többi helyen pedig 0.\n",
     "# Be: [1, 2, 0, 3], 4\n",
     "# Ki: [[0,1,0,0], [0, 0, 1, 0], [1, 0, 0, 0], [0, 0, 0, 1]]\n",
-    "# encode_Y()"
+    "# encode_Y()\n",
+    "\n",
+    "def encode_Y(arr : np.array, n : int)-> np.array:\n",
+    "    temp_arr = np.zeros((np.shape(arr)[0], n))\n",
+    "    temp_arr[np.arange(n), arr[:]] = 1\n",
+    "    return temp_arr\n",
+    "\n",
+    "\n",
+    "#encode_Y([1, 2, 0, 3], 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 0, 3], dtype=int64)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# A fenti feladatnak valósítsd meg a kiértékelését. Adj meg a 2d array-t és adj vissza a decodolt változatát\n",
+    "#(5) A fenti feladatnak valósítsd meg a kiértékelését. Adj meg a 2d array-t és adj vissza a decodolt változatát\n",
     "# Be:  [[0,1,0,0], [0, 0, 1, 0], [1, 0, 0, 0], [0, 0, 0, 1]]\n",
     "# Ki:  [1, 2, 0, 3]\n",
-    "# decode_Y()"
+    "# decode_Y()\n",
+    "\n",
+    "def decode_Y(arr:np.array)-> np.array:\n",
+    "    return np.where(arr == 1)[1]\n",
+    "\n",
+    "\n",
+    "'''eredmény: array([1, 2, 0, 3], dtype=int64) '''\n",
+    "#decode_Y(np.array([[0,1,0,0], [0, 0, 1, 0], [1, 0, 0, 0], [0, 0, 0, 1]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'banab'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Készíts egy olyan függvényt, ami képes kiértékelni egy neurális háló eredményét! Bemenetként egy listát és egy array-t és adja vissza azt az elemet, aminek a legnagyobb a valószínüsége(értéke) a listából.\n",
+    "#(6) Készíts egy olyan függvényt, ami képes kiértékelni egy neurális háló eredményét! Bemenetként egy listát és egy array-t és adja vissza azt az elemet, aminek a legnagyobb a valószínüsége(értéke) a listából.\n",
     "# Be: ['alma', 'körte', 'szilva'], [0.2, 0.2, 0.6]. # Az ['alma', 'körte', 'szilva'] egy lista!\n",
     "# Ki: 'szilva'\n",
-    "# eval_classification()"
+    "# eval_classification()\n",
+    "\n",
+    "def eval_classification(input_list : list, arr : np.array)-> str:\n",
+    "\n",
+    "    return input_list[np.argmax(arr)]\n",
+    "\n",
+    "\n",
+    "#eval_classification(['alma', 'körte', 'szilva', 'kaga', 'banab'], np.array([0.2, 0.2, 0.6, 0.6, 1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  2, -1,  4, -1,  6])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Készíts egy olyan függvényt, ahol az 1D array-ben a páratlan számokat -1-re cseréli\n",
+    "#(7) Készíts egy olyan függvényt, ahol az 1D array-ben a páratlan számokat -1-re cseréli\n",
     "# Be: [1,2,3,4,5,6]\n",
     "# Ki: [-1,2,-1,4,-1,6]\n",
-    "# repalce_odd_numbers()"
+    "# repalce_odd_numbers()\n",
+    "\n",
+    "def repalce_odd_numbers(arr : np.array)-> np.array:\n",
+    "    arr[np.where(arr % 2 == 1)] = -1\n",
+    "    return arr\n",
+    "\n",
+    "#repalce_odd_numbers(np.array([1,2,3,4,5,6]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  1,  1, -1])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Készíts egy olyan függvényt, ami egy array értékeit -1 és 1-re változtatja, attól függően, hogy az adott elem nagyobb vagy kisebb a paraméterként megadott számnál.\n",
+    "#(8) Készíts egy olyan függvényt, ami egy array értékeit -1 és 1-re változtatja, attól függően, hogy az adott elem nagyobb vagy kisebb a paraméterként megadott számnál.\n",
     "# Ha a szám kisebb mint a megadott érték, akkor -1, ha nagyobb vagy egyenlő, akkor pedig 1.\n",
     "# Be: [1, 2, 5, 0], 2\n",
     "# Ki: [-1, 1, 1, -1]\n",
-    "# replace_by_value()"
+    "# replace_by_value()\n",
+    "\n",
+    "def replace_by_value(arr : np.array, i : int)-> np.array:\n",
+    "    arr[arr < i] = -1\n",
+    "    arr[arr >= i] = 1\n",
+    "\n",
+    "    return arr\n",
+    "\n",
+    "#replace_by_value(np.array([1, 2, 5, 0]), 2)\n"
    ]
   },
   {
@@ -130,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Készíts egy olyan függvényt, ami egy array értékeit összeszorozza és az eredményt visszaadja\n",
+    "#(9) Készíts egy olyan függvényt, ami egy array értékeit összeszorozza és az eredményt visszaadja\n",
     "# Be: [1,2,3,4]\n",
     "# Ki: 24\n",
     "# array_multi()\n",
@@ -143,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Készíts egy olyan függvényt, ami egy 2D array értékeit összeszorozza és egy olyan array-el tér vissza, aminek az elemei a soroknak a szorzata\n",
+    "#(10) Készíts egy olyan függvényt, ami egy 2D array értékeit összeszorozza és egy olyan array-el tér vissza, aminek az elemei a soroknak a szorzata\n",
     "# Be: [[1, 2], [3, 4]]\n",
     "# Ki: [2, 12]\n",
     "# array_multi_2d()"
@@ -155,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Készíts egy olyan függvényt, amit egy meglévő numpy array-hez készít egy bordert nullásokkal. Bementként egy array-t várjon és kimenetként egy array jelenjen meg aminek van border-je\n",
+    "#(11) Készíts egy olyan függvényt, amit egy meglévő numpy array-hez készít egy bordert nullásokkal. Bementként egy array-t várjon és kimenetként egy array jelenjen meg aminek van border-je\n",
     "# Be: [[1,2],[3,4]]\n",
     "# Ki: [[0,0,0,0],[0,1,2,0],[0,3,4,0],[0,0,0,0]]\n",
     "# add_border()\n"
@@ -176,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Készíts egy olyan függvényt ami két dátum között felsorolja az összes napot és ezt adja vissza egy numpy array-ben. A fgv ként str vár paraméterként 'YYYY-MM' formában.\n",
+    "#(12) Készíts egy olyan függvényt ami két dátum között felsorolja az összes napot és ezt adja vissza egy numpy array-ben. A fgv ként str vár paraméterként 'YYYY-MM' formában.\n",
     "# Be: '2023-03', '2023-04'  # mind a kettő paraméter str.\n",
     "# Ki: ['2023-03-01', '2023-03-02', .. , '2023-03-31',]\n",
     "# list_days()"
@@ -188,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Írj egy fügvényt ami vissza adja az aktuális dátumot az alábbi formában: YYYY-MM-DD. Térjen vissza egy 'numpy.datetime64' típussal.\n",
+    "#(13) Írj egy fügvényt ami vissza adja az aktuális dátumot az alábbi formában: YYYY-MM-DD. Térjen vissza egy 'numpy.datetime64' típussal.\n",
     "# Be:\n",
     "# Ki: 2017-03-24\n"
    ]
@@ -199,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Írj egy olyan függvényt ami visszadja, hogy mennyi másodperc telt el 1970 január 01. 00:02:00 óta. Int-el térjen vissza\n",
+    "#(14) Írj egy olyan függvényt ami visszadja, hogy mennyi másodperc telt el 1970 január 01. 00:02:00 óta. Int-el térjen vissza\n",
     "# Be: \n",
     "# Ki: másodpercben az idó, int-é kasztolva\n",
     "# sec_from_1970()"
@@ -222,9 +362,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "b2532e59ff2e8459df16beaeea4e3a8d7ced2c67c8d1a79f857a2bc4535fba1f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
