--- a/GYAK/GYAK05/lesson.ipynb
+++ b/GYAK/GYAK05/lesson.ipynb
@@ -573,12 +573,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.64807407, 3.15436206, 2.90344623, 0.6244998 , 3.318132  ,\n",
+       "       1.28840987, 1.18321596, 0.90553851, 1.00995049, 0.9486833 ,\n",
+       "       3.73229152, 1.92613603, 3.60555128, 0.55677644, 1.61554944,\n",
+       "       1.26095202, 3.75099987, 1.53948043, 3.59583092, 0.81240384,\n",
+       "       3.4       , 1.41774469, 2.58650343, 1.2083046 , 1.54272486,\n",
+       "       3.539774  , 4.16653333, 3.48998567, 0.14142136, 4.36463057,\n",
+       "       3.99124041, 0.97467943, 0.31622777, 3.47275107, 3.65513338,\n",
+       "       3.64280112, 1.21243557, 0.75498344, 0.34641016, 3.58608422,\n",
+       "       3.43220046, 1.48996644, 0.79372539, 1.19163753])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def euclidean(points:np.ndarray,element_of_x:np.ndarray) -> np.ndarray:\n",
-    "    return np.sqrt(np.sum((points - element_of_x)**2,axis=1))"
+    "    return np.sqrt(np.sum((points - element_of_x)**2,axis=1))\n",
+    "\n",
+    "euclidean(x_train, x_test[0])"
    ]
   },
   {
@@ -591,20 +612,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\darab\\AppData\\Roaming\\Python\\Python39\\site-packages\\debugpy\\_vendored\\pydevd\\_pydevd_bundle\\pydevd_vars.py\", line 624, in change_attr_expression\n",
+      "    value = eval(expression, frame.f_globals, frame.f_locals)\n",
+      "  File \"<string>\", line 1, in <module>\n",
+      "NameError: name 'array' is not defined\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([1, 2, 1, 2, 1, 0, 2, 1, 0, 0, 0, 1, 2, 0, 0, 1, 0, 1, 2, 0, 1, 2,\n",
-       "       0, 2, 2, 1, 1, 2, 1, 0, 1, 2, 0, 0, 1, 2, 0, 2, 0, 0, 0, 1, 2, 2,\n",
-       "       2, 2, 1, 0, 0, 2, 2, 0, 0, 0, 2, 2, 0, 2, 2, 0, 1, 1, 2, 1, 2, 0,\n",
-       "       2, 1, 2, 2, 1, 1, 0, 1, 1, 0, 1, 2, 2, 0, 1, 2, 2, 0, 2, 0, 1, 2,\n",
-       "       2, 1, 2, 1, 2, 2, 0, 1, 1, 0, 1, 2])"
+       "((100,), (44,))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +648,7 @@
     "    return np.array(labels_pred,dtype=np.int32)\n",
     "\n",
     "pred = predict(x_train, y_train, x_test, 3)\n",
-    "pred"
+    "pred.shape, y_train.shape"
    ]
   },
   {
