--- a/HAZI/HAZI05/TEST.ipynb
+++ b/HAZI/HAZI05/TEST.ipynb
@@ -2,135 +2,132 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "from typing import Tuple\n",
-    "from scipy.stats import mode\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "import pandas as pd\n",
-    "from HAZI05 import KNNClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "knn = KNNClassifier(3, 0.5)\n",
-    "x, y = knn.load_csv(r'C:\\Users\\darab\\source\\repos\\BEVADAT\\QYZF3M_BEVADAT2022232\\HAZI\\HAZI05\\diabetes.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Outcome</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Outcome</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Outcome</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Outcome</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Outcome</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>379</th>\n",
-       "      <td>Outcome</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>380</th>\n",
-       "      <td>Outcome</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>381</th>\n",
-       "      <td>Outcome</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>382</th>\n",
-       "      <td>Outcome</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>383</th>\n",
-       "      <td>Outcome</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>384 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           0\n",
-       "0    Outcome\n",
-       "1    Outcome\n",
-       "2    Outcome\n",
-       "3    Outcome\n",
-       "4    Outcome\n",
-       "..       ...\n",
-       "379  Outcome\n",
-       "380  Outcome\n",
-       "381  Outcome\n",
-       "382  Outcome\n",
-       "383  Outcome\n",
-       "\n",
-       "[384 rows x 1 columns]"
+       "'import numpy as np\\nimport seaborn as sns\\nfrom typing import Tuple\\nfrom scipy.stats import mode\\nfrom sklearn.metrics import confusion_matrix\\nimport pandas as pd\\nfrom HAZI05 import KNNClassifier'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "knn.train_test_split(x, y)\n",
-    "knn.predict(knn.x_test)\n",
-    "knn.y_preds"
+    "\n",
+    "'''import numpy as np\n",
+    "import seaborn as sns\n",
+    "from typing import Tuple\n",
+    "from scipy.stats import mode\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import pandas as pd\n",
+    "from HAZI05 import KNNClassifier'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from typing import Tuple\n",
+    "\n",
+    "from scipy.stats import mode\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "class KNNClassifier:\n",
+    "\n",
+    "\n",
+    "    @property\n",
+    "\n",
+    "    def k_neighbors(self):\n",
+    "\n",
+    "        return self.k\n",
+    "\n",
+    "\n",
+    "    def __init__(self, k: int, test_split_ratio: float) -> None:\n",
+    "\n",
+    "        self.k = k\n",
+    "        self.test_split_ratio = test_split_ratio\n",
+    "\n",
+    "\n",
+    "        self.x_test, self.y_test = None, None\n",
+    "\n",
+    "        self.x_train, self.y_train = None, None\n",
+    "\n",
+    "        self.y_preds = None\n",
+    "\n",
+    "\n",
+    "    def train_test_split(self, features: pd.DataFrame, labels: pd.DataFrame) -> None:\n",
+    "\n",
+    "        test_size = int(features.shape[0] * self.test_split_ratio)\n",
+    "\n",
+    "        train_size = features.shape[0] - test_size\n",
+    "\n",
+    "        assert features.shape[0] == test_size + train_size, \"Size mismatch!\"\n",
+    "\n",
+    "\n",
+    "        self.x_train, self.y_train = features.iloc[:train_size, :], labels.iloc[:train_size]\n",
+    "\n",
+    "        self.x_test, self.y_test = features.iloc[train_size:train_size+test_size, :].reset_index(drop=True), labels.iloc[train_size:train_size + test_size].reset_index(drop=True)\n",
+    "\n",
+    "\n",
+    "    def euclidean(self, element_of_x: pd.DataFrame) -> pd.DataFrame:\n",
+    "        \n",
+    "        return pd.DataFrame(np.sqrt(((self.x_train - element_of_x)**2).sum(axis=1)))\n",
+    "\n",
+    "\n",
+    "    def predict(self, x_test: pd.DataFrame) -> None:\n",
+    "\n",
+    "        labels_pred = []\n",
+    "\n",
+    "        for idx in range(len(x_test)):\n",
+    "            a = x_test.iloc[[idx]]\n",
+    "            distances = self.euclidean(x_test.iloc[[idx]])\n",
+    "\n",
+    "            distances = pd.DataFrame(sorted(zip(distances, self.y_train)))\n",
+    "\n",
+    "            label_pred = distances[:self.k, 1].mode()\n",
+    "\n",
+    "            labels_pred.append(label_pred)\n",
+    "\n",
+    "        self.y_preds = pd.DataFrame(labels_pred)\n",
+    "\n",
+    "\n",
+    "    def accuracy(self) -> float:\n",
+    "        true_positive = (self.y_test == pd.DataFrame(self.y_preds)).sum()\n",
+    "\n",
+    "        return true_positive / self.y_test.shape[0] * 100\n",
+    "\n",
+    "\n",
+    "    def confusion_matrix(self):\n",
+    "        conf_matrix = confusion_matrix(self.y_test, self.y_preds)\n",
+    "\n",
+    "        return conf_matrix\n",
+    "\n",
+    "\n",
+    "    @staticmethod\n",
+    "\n",
+    "    def load_csv(csv_path: str) -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
+    "        df = pd.read_csv(csv_path)\n",
+    "        df = df.sample(frac=1, random_state=42, ignore_index=True)\n",
+    "        x_ = df.iloc[:, :8]\n",
+    "        y_ = df[['Outcome']] #pd.DataFrame(df['Outcome']) dupla [[]] = dataframet ad vissza series helyett\n",
+    "\n",
+    "        return x_, y_"
    ]
   },
   {
@@ -139,24 +136,42 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Can only compare identically-labeled DataFrame objects",
+     "ename": "KeyError",
+     "evalue": "(slice(None, 3, None), 1)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m knn\u001b[39m.\u001b[39;49maccuracy()\n",
-      "File \u001b[1;32mc:\\Users\\darab\\source\\repos\\BEVADAT\\QYZF3M_BEVADAT2022232\\HAZI\\HAZI05\\HAZI05.py:76\u001b[0m, in \u001b[0;36mKNNClassifier.accuracy\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     75\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39maccuracy\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mfloat\u001b[39m:\n\u001b[1;32m---> 76\u001b[0m     true_positive \u001b[39m=\u001b[39m (\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49my_test \u001b[39m==\u001b[39;49m pd\u001b[39m.\u001b[39;49mDataFrame(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49my_preds))\u001b[39m.\u001b[39msum()\n\u001b[0;32m     78\u001b[0m     \u001b[39mreturn\u001b[39;00m true_positive \u001b[39m/\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my_test\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m] \u001b[39m*\u001b[39m \u001b[39m100\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\darab\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\ops\\common.py:69\u001b[0m, in \u001b[0;36m_unpack_zerodim_and_defer.<locals>.new_method\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     65\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39mNotImplemented\u001b[39m\n\u001b[0;32m     67\u001b[0m other \u001b[39m=\u001b[39m item_from_zerodim(other)\n\u001b[1;32m---> 69\u001b[0m \u001b[39mreturn\u001b[39;00m method(\u001b[39mself\u001b[39;49m, other)\n",
-      "File \u001b[1;32mc:\\Users\\darab\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\arraylike.py:32\u001b[0m, in \u001b[0;36mOpsMixin.__eq__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39m@unpack_zerodim_and_defer\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m__eq__\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     31\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__eq__\u001b[39m(\u001b[39mself\u001b[39m, other):\n\u001b[1;32m---> 32\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cmp_method(other, operator\u001b[39m.\u001b[39;49meq)\n",
-      "File \u001b[1;32mc:\\Users\\darab\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\frame.py:6851\u001b[0m, in \u001b[0;36mDataFrame._cmp_method\u001b[1;34m(self, other, op)\u001b[0m\n\u001b[0;32m   6848\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_cmp_method\u001b[39m(\u001b[39mself\u001b[39m, other, op):\n\u001b[0;32m   6849\u001b[0m     axis \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m  \u001b[39m# only relevant for Series other case\u001b[39;00m\n\u001b[1;32m-> 6851\u001b[0m     \u001b[39mself\u001b[39m, other \u001b[39m=\u001b[39m ops\u001b[39m.\u001b[39;49malign_method_FRAME(\u001b[39mself\u001b[39;49m, other, axis, flex\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, level\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m)\n\u001b[0;32m   6853\u001b[0m     \u001b[39m# See GH#4537 for discussion of scalar op behavior\u001b[39;00m\n\u001b[0;32m   6854\u001b[0m     new_data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dispatch_frame_op(other, op, axis\u001b[39m=\u001b[39maxis)\n",
-      "File \u001b[1;32mc:\\Users\\darab\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\ops\\__init__.py:288\u001b[0m, in \u001b[0;36malign_method_FRAME\u001b[1;34m(left, right, axis, flex, level)\u001b[0m\n\u001b[0;32m    286\u001b[0m             left, right \u001b[39m=\u001b[39m left\u001b[39m.\u001b[39malign(right, join\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mouter\u001b[39m\u001b[39m\"\u001b[39m, level\u001b[39m=\u001b[39mlevel, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m    287\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 288\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    289\u001b[0m                 \u001b[39m\"\u001b[39m\u001b[39mCan only compare identically-labeled DataFrame objects\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    290\u001b[0m             )\n\u001b[0;32m    291\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(right, ABCSeries):\n\u001b[0;32m    292\u001b[0m     \u001b[39m# axis=1 is default for DataFrame-with-Series op\u001b[39;00m\n\u001b[0;32m    293\u001b[0m     axis \u001b[39m=\u001b[39m left\u001b[39m.\u001b[39m_get_axis_number(axis) \u001b[39mif\u001b[39;00m axis \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m \u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mValueError\u001b[0m: Can only compare identically-labeled DataFrame objects"
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 12\u001b[0m\n\u001b[0;32m      4\u001b[0m knn\u001b[39m.\u001b[39mtrain_test_split(x, y)\n\u001b[0;32m      6\u001b[0m \u001b[39m'''def euclidean(x_train, element_of_x: pd.DataFrame) -> pd.DataFrame:\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39m        temp = x_train - element_of_x\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39m        return np.sqrt(((x_train.values - element_of_x.values)**2).sum(axis=1))\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \n\u001b[0;32m     10\u001b[0m \u001b[39meuclidean(knn.x_train, knn.x_test.iloc[0, :])'''\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m knn\u001b[39m.\u001b[39;49mpredict(knn\u001b[39m.\u001b[39;49mx_test)\n",
+      "Cell \u001b[1;32mIn[4], line 66\u001b[0m, in \u001b[0;36mKNNClassifier.predict\u001b[1;34m(self, x_test)\u001b[0m\n\u001b[0;32m     62\u001b[0m     distances \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meuclidean(x_test\u001b[39m.\u001b[39miloc[[idx]])\n\u001b[0;32m     64\u001b[0m     distances \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(\u001b[39msorted\u001b[39m(\u001b[39mzip\u001b[39m(distances, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my_train)))\n\u001b[1;32m---> 66\u001b[0m     label_pred \u001b[39m=\u001b[39m distances\u001b[39m.\u001b[39;49mmode()[:\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mk, \u001b[39m1\u001b[39;49m]\n\u001b[0;32m     68\u001b[0m     labels_pred\u001b[39m.\u001b[39mappend(label_pred)\n\u001b[0;32m     70\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my_preds \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(labels_pred)\n",
+      "File \u001b[1;32mc:\\Users\\darab\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\frame.py:3458\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3456\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3457\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3458\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3459\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3460\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\darab\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexes\\range.py:388\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m    386\u001b[0m         \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m    387\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m--> 388\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key)\n\u001b[0;32m    389\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mget_loc(key, method\u001b[39m=\u001b[39mmethod, tolerance\u001b[39m=\u001b[39mtolerance)\n",
+      "\u001b[1;31mKeyError\u001b[0m: (slice(None, 3, None), 1)"
      ]
     }
    ],
    "source": [
-    "knn.accuracy()"
+    "knn = KNNClassifier(3, 0.2)\n",
+    "x, y = knn.load_csv(r'C:\\Users\\darab\\source\\repos\\BEVADAT\\QYZF3M_BEVADAT2022232\\HAZI\\HAZI05\\diabetes.csv')\n",
+    "\n",
+    "knn.train_test_split(x, y)\n",
+    "\n",
+    "'''def euclidean(x_train, element_of_x: pd.DataFrame) -> pd.DataFrame:\n",
+    "        temp = x_train - element_of_x\n",
+    "        return np.sqrt(((x_train.values - element_of_x.values)**2).sum(axis=1))\n",
+    "\n",
+    "euclidean(knn.x_train, knn.x_test.iloc[0, :])'''\n",
+    "\n",
+    "knn.predict(knn.x_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#knn.accuracy()"
    ]
   }
  ],
