--- a/HAZI/HAZI05/TEST.ipynb
+++ b/HAZI/HAZI05/TEST.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,25 +118,26 @@
     "    def load_csv(csv_path: str) -> Tuple[pd.DataFrame, pd.DataFrame]:  # 2\n",
     "        df = pd.read_csv(csv_path)\n",
     "        df = df.sample(frac=1, random_state=42, ignore_index=True)\n",
-    "        x_ = df.iloc[:, :8]\n",
+    "        x_ = df.iloc[:, :-1]\n",
     "        # pd.DataFrame(df['Outcome']) dupla [[]] = dataframet ad vissza series helyett\n",
-    "        y_ = df[['Outcome']]\n",
+    "        y_ = pd.DataFrame(df.iloc[:, -1])\n",
     "\n",
     "        return x_, y_\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 63.4), (2, 67.97), (4, 71.9), (6, 74.51), (9, 75.16), (18, 75.16)]"
+       "array([[86,  9],\n",
+       "       [31, 27]], dtype=int64)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,6 +151,7 @@
     "knn.predict(knn.x_test)\n",
     "\n",
     "knn.best_k()\n",
+    "knn.confusion_matrix()\n",
     "\n"
    ]
   }
@@ -172,7 +174,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "b2532e59ff2e8459df16beaeea4e3a8d7ced2c67c8d1a79f857a2bc4535fba1f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
